# vlm_classification

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  results.csv
backup/: .dockerignore  .env.example  README.md  docker-compose.yml
backup/cli/: __init__.py  main.py
backup/src/: __init__.py
backup/src/document/: __init__.py
backup/src/ocr/: __init__.py  engine.py
backup/src/pipeline/: __init__.py
backup/src/utils/: logger.py
backup/tests/: __init__.py  test_document_processor.py
config/: __init__.py  settings.py
docs/: architecture.md
scripts/: benchmark.py  continuation.py  hf_model_download.py  run_ocr.sh  test_olmocr (1).py  test_olmocr.py
scripts/results/: results (1).csv
src/document/: processor.py
src/ocr/: prompts.py
src/pipeline/: orchestrator.py
src/utils/: __init__.py  image.py
testing/: continuation.py  requirements.txt  test_olmocr (3).py
testing/results/: results.csv
tests/: test_ocr_engine.py  test_pipeline.py
