[project]
name = "vlm-classification"
version = "0.1.0"
description = "Fast document OCR pipeline using PaddleOCR-VL-1.5 with vLLM backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# NOTE: These are HOST-SIDE dev dependencies only.
# All runtime deps (paddleocr, vllm, paddle) live inside Docker.
dependencies = [
    "accelerate>=0.26.0",
    "bitsandbytes>=0.42.0",
    "einops>=0.8.2",
    "hf-transfer>=0.1.9",
    "olmocr>=0.4.0",
    "pillow>=10.0.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0.0",
    "qwen-vl-utils>=0.0.14",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=4.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
